<resources>
    <string name="app_name">GassApp!</string>
    <string name="lecturas_de_gas">Lecturas de Gas</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="username">Username</string>
    <string name="main_menu">Main Menu</string>
    <string name="sensor_configuration">Sensor Configuration</string>
    <string name="logo">logo</string>
    <string name="nombredelaaplicacion">nombredelaaplicacion</string>
    <string name="password">password</string>
    <string name="olvide_mi_contrase_a">olvide_mi_contrase_a</string>
    <string name="iniciarsecion">iniciarsecion</string>
    <string name="icloud">icloud</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="view_alerts">View Alerts</string>
    <string name="configuracion_del_sensor">configuracion del sensor</string>
    <string name="sensor_id">Sensor ID</string>
    <string name="valor_umbral">valor umbral</string>
    <string name="guardar">Guardar</string>
    <string name="actualizar">actualizar</string>
    <string name="eliminar">eliminar</string>
    <string name="login">login</string>
    <string name="configuracion">configuracion</string>
    <string name="ayuda">ayuda</string>
    <string name="configuracion_sensor">configuracion_sensor</string>
    <string name="configuracion_general">configuracion_general</string>
    <string name="pantalla_de_alertas_de_emergencia">Pantalla de alertas de emergencia</string>
    <string name="no_alertas">no_alertas</string>
    <string name="regresar">regresar</string>
    <string name="informacion_ayuda">informacion_ayuda</string>
    <string name="idioma">idioma</string>
    <string name="ingles">ingles</string>
    <string name="espa_ol">español</string>
    <string name="notificaciones_sonoras">notificaciones_sonoras</string>
    <string name="notificaciones_visuales">notificaciones_visuales</string>
    <string name="guardar_cambios">guardar_cambios</string>
    <string name="guardar_configuraci_n">guardar_configuraci_n</string>
    <string name="estado_activo">estado_activo</string>
    <string name="sensor_cocina">sensor_cocina</string>
    <string name="agregar_sensor">agregar_sensor</string>
    <string name="configuraci_n_de_sensores">configuraci_n_de_sensores</string>
    <string name="ventile_el_area_inmediatamente">ventile_el_area_inmediatamente</string>
    <string name="alerta_de_gas_detectada">alerta_de_gas_detectada</string>
    <string name="se_ha_detectado_una_fuga_de_gas_en_el_sensor_cocina">se_ha_detectado_una_fuga_de_gas_en_el_sensor_cocina</string>
    <string name="contactar_emergencias">contactar_emergencias</string>
    <string name="apagar_dispositivos_conectados">apagar_dispositivos_conectados</string>
    <string name="se_hadetectado_una_fuga_de_gas_en_el_sensor_cocina">se ha detectado una fuga de gas en el sensor cocina</string>
    <string name="contactar__emergencias">contactar emergencias</string>
    <string name="apagar_dispositivos__conectados">apagar dispositivos conectados</string>
    <string name="ventile_el_area__inmediatamente">ventile el area inmediatamente</string>
    <string name="alertadegasdetectada">alertadegasdetectada</string>
    <string name="alerta_de_gasdetectada_">alerta de gasdetectada</string>
    <string name="esta_aplicaci_n_m_vil_est_dise_ada_para_ayudarte_a_gestionar_tus_necesidades_de_manera">Esta aplicación móvil está diseñada para ayudarte a gestionar tus necesidades de manera</string>
    <string name="eficiente_aqu_hay_algunas_funcionalidades_que_puedes_explorar">eficiente. Aquí hay algunas funcionalidades que puedes explorar:</string>
    <string name="configuraci_n_de_sensores_monitorea_y_ajusta_los_sensores_seg_n_tus_preferencias">- Configuración de sensores: Monitorea y ajusta los sensores según tus preferencias.</string>
    <string name="alertas_recibe_notificaciones_importantes_sobre_eventos_relevantes">- Alertas: Recibe notificaciones importantes sobre eventos relevantes.</string>
    <string name="soporte_accede_a_la_secci_n_de_ayuda_para_resolver_cualquier_duda">- Soporte: Accede a la sección de ayuda para resolver cualquier duda.</string>
    <string name="configuraci_n_general_personaliza_la_aplicaci_n_seg_n_tus_necesidades">- Configuración general: Personaliza la aplicación según tus necesidades.</string>
    <string name="twitter">twitter</string>
    <string name="nombre_de_la_aplicacion">nombre de la aplicacion</string>


</resources>