<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/img">

    <!-- Logo de la aplicación -->
    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_gravity="center"/>

    <!-- Título de la aplicación -->
    <TextView
        android:id="@+id/tv_nombre_aplicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_de_la_aplicacion"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="32dp"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:drawableStart="@android:drawable/ic_menu_edit"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password"
        android:padding="10dp"
        android:inputType="textPassword" />


    <TextView
        android:id="@+id/tv_olvide_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvide_mi_contrase_a"
        android:textColor="#2196F3"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"/>

    <!-- Texto para iniciar sesión con redes sociales -->
    <TextView
        android:id="@+id/tv_iniciar_con_redes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciarsecion"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/facebook"/>

        <Button
            android:id="@+id/btn_google"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/google"/>

        <Button
            android:id="@+id/btn_twitter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/twitter"/>
    </LinearLayout>

</LinearLayout>


